:recycle: refactor:Adiconando o lessonsDTO.